# Aspect-based-Sentimental-Analysis

./: README.md  pyproject.toml  requirements.txt
