[project]
name = "aspect_based_sentimental_analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "SUSHRUTH3002",email = "sushruthmsetty29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
